--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<img [src]="product.pImage" width="200px" height="200px">
 <p>Name: {{product.name}}</p>
 <p>price: {{'$'+ product.price}}</p>
 <p>Color: {{product.color}}</p>
